--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# vscode
-.vscode 
-
-# Intellij
-*.iml
-.idea
-
 # npm
 node_modules
 
@@ -17,6 +10,4 @@ main.js
 
 # obsidian
 data.json
-
-# Exclude macOS Finder (System Explorer) View States
-.DS_Store
+.env
