--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@types/better-sqlite3": "^7.6.12",
-		"@types/bun": "^1.1.17",
 		"@types/mailparser": "^3.4.5",
 		"@types/node": "^22.10.7",
 		"@types/smtp-server": "^3.5.10",
@@ -29,10 +27,10 @@
 	"dependencies": {
 		"@hono/node-server": "^1.13.8",
 		"@hono/valibot-validator": "^0.5.2",
-		"better-sqlite3": "^9.4.3",
 		"drizzle-orm": "^0.40.1",
 		"es-toolkit": "^1.31.0",
 		"hono": "^4.7.1",
+		"libsql": "^0.5.1",
 		"mailauth": "^4.8.2",
 		"mailparser": "^3.7.2",
 		"smtp-server": "^3.13.6"
