--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
 		"builtin-modules": "4.0.0",
 		"esbuild": "0.24.2",
 		"obsidian": "latest",
+		"sse.js": "^2.6.0",
 		"tslib": "^2.8.1",
 		"typescript": "5.8.2"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.13.8",
-		"@hono/valibot-validator": "^0.5.2",
 		"@libsql/client": "^0.15.0",
 		"drizzle-kit": "^0.30.5",
 		"drizzle-orm": "^0.40.1",
