--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"test": "vitest run"
 	},
 	"keywords": [],
 	"author": "",
@@ -19,10 +20,11 @@
 		"@types/smtp-server": "^3.5.10",
 		"builtin-modules": "4.0.0",
 		"esbuild": "0.24.2",
+		"eventsource": "^4.0.0",
 		"obsidian": "latest",
-		"sse.js": "^2.6.0",
 		"tslib": "^2.8.1",
-		"typescript": "5.8.2"
+		"typescript": "5.8.2",
+		"vitest": "^3.1.4"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.13.8",
