--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "obsidian-email-plugin",
+	"name": "Email Plugin",
+	"version": "0.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Receive emails as Obsidian notes.",
+	"author": "sairus2k",
+	"authorUrl": "https://github.com/sairus2k",
+	"fundingUrl": "https://github.com/sponsors/sairus2k",
+	"isDesktopOnly": true
 }
