--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
               with:
-                  node-version: "22.16.0"
+                  node-version-file: ".tool-versions"
             - run: npm ci
             - run: npm run build
 
