Migrate to pnpm

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,15 +14,19 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version-file: ".tool-versions"
-            - run: npm ci
-            - run: npm run build
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: latest
+                  run_install: false
+            - run: pnpm install --frozen-lockfile
+            - run: pnpm run build
 
             - name: Create release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   tag="${GITHUB_REF#refs/tags/}"
-                  
+
                   gh release create "$tag" \
                     --title="$tag" \
                     --draft \
