--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,17 @@ jobs:
       - uses: actions/setup-node@v4
         with:
             node-version-file: ".tool-versions"
+      - uses: pnpm/action-setup@v2
+        with:
+            version: latest
+            run_install: false
       - name: Verify OpenSSL installation
         run: openssl version
       - name: Verify curl installation
         run: curl --version
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       - name: Create directories for tests
         run: mkdir -p ./certs
       - name: Run tests
-        run: npm test
+        run: pnpm test
